--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,3 +5,5 @@ main:
     url: /about/
   - title: "Archives"
     url: /archives/
+  - title: "Github"
+    url: "https://github.com/LucasWithBoots"
